# dotted

./: .gitignore  Cargo.toml  PKGBUILD  README.md  justfile
sandbox/: Dockerfile
sandbox/test-dotted/: [dotted].toml
sandbox/test-dotted/[artifacts]/: [about].toml
sandbox/test-dotted/[artifacts]/git/home/.config/git/: config
sandbox/test-dotted/[artifacts]/micro/: [bin].toml
sandbox/test-dotted/[settings]/sandbox/: user1.toml
sandbox/test-dotted/repo2/neovim/: [bin].toml
sandbox/test-dotted/repo2/sysconfig/: [bin].toml
sandbox/test-dotted/repo2/sysconfig/etc/: config.conf
sandbox/test-home/.config/git/: config
src/: cli.rs  lib.rs  main.rs  plan.rs  utils.rs
src/commands/: lib.rs  mod.rs
src/commands/adopt/: file.rs  package.rs
src/commands/artifact/: create.rs  disable.rs  enable.rs  list.rs  mod.rs  show.rs  uninstall.rs
src/commands/backup/: list.rs  mod.rs  restore.rs
src/commands/deploy/: apply.rs  diff.rs  mod.rs  orphans.rs  status.rs
src/commands/files/: ignore.rs  list.rs  mod.rs  scan.rs
src/commands/repo/: about.rs  add.rs  list.rs  mod.rs  remove.rs
src/commands/shell/: completions.rs  env.rs  mod.rs
src/commands/workspace/: cd.rs  doctor.rs  init.rs  mod.rs  pull.rs  push.rs
src/types/: about_file.rs  bin_file.rs  dotted_file.rs  mod.rs  plan.rs  runtime.rs  settings_file.rs
tests/: cli.rs
tests/fixtures/: .gitignore  [local].toml
tests/fixtures/[artifacts]/git/: [bin].toml
tests/fixtures/[settings]/[device]/: [user].toml
tests/fixtures/repo2/: [about].toml
