[package]
name = "dotted"
version = "1.0.0"
edition = "2024"

[dependencies]
color-eyre = "0.6"
blake2 = "0.10.6"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive", "env", "color"] }
clap_complete = "4.6.7"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
shell-escape = "0.1.5"
similar = "3.1.1"
toml = "1.1.2"
walkdir = "2.5.0"
glob = "0.3.1"
cliclack = "0.3.5"
comfy-table = "7.1.3"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
tempfile = "3.27.0"

[lints.rust]
unsafe_code = "deny"
missing_docs = "allow"
unused_crate_dependencies = "allow"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -2 }
must_use_candidate = "allow"
cast_possible_truncation = "warn"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
unwrap_used = "deny"
expect_used = "warn"
panic_in_result_fn = "deny"
await_holding_lock = "deny"
undocumented_unsafe_blocks = "deny"
